// ==========================================
// DATABASE SCHEMA (DBML)
// File ini dapat diisi/diedit sesuai kebutuhan database Anda.
// Anda juga bisa mengopi isi file ini ke dbdiagram.io
// ==========================================

// 1. Pengguna & Pengautentikasi (Users)
Table users {
  id int [pk, increment]
  name varchar [not null]
  email varchar [unique, not null]
  password varchar [not null]
  role varchar [note: 'admin | kasir | owner']
  created_at timestamp
  updated_at timestamp
}

// 2. Kategori Produk
Table categories {
  id int [pk, increment]
  name varchar [not null]
  created_at timestamp
  updated_at timestamp
}

// 3. Produk / Barang
Table products {
  id int [pk, increment]
  category_id int [ref: > categories.id]
  name varchar [not null]
  price decimal(12,2) [not null]
  stock int [default: 0]
  created_at timestamp
  updated_at timestamp
}

// 4. Pelanggan (Customers)
Table customers {
  id int [pk, increment]
  name varchar [not null]
  phone varchar
  created_at timestamp
  updated_at timestamp
}

// 5. Transaksi Utama (Header Nota)
Table transactions {
  id int [pk, increment]
  user_id int [ref: > users.id, note: 'Kasir yang melayani']
  customer_id int [ref: > customers.id, null]
  invoice_number varchar [unique, not null]
  total_amount decimal(12,2) [not null]
  created_at timestamp
  updated_at timestamp
}

// 6. Detail Transaksi (Item yang dibeli)
Table transaction_details {
  id int [pk, increment]
  transaction_id int [ref: > transactions.id]
  product_id int [ref: > products.id]
  quantity int [not null]
  price decimal(12,2) [not null]
  subtotal decimal(12,2) [not null]
  created_at timestamp
  updated_at timestamp
}

// 7. Pembayaran
Table payments {
  id int [pk, increment]
  transaction_id int [ref: > transactions.id]
  payment_method varchar [note: 'cash | qris | transfer']
  amount decimal(12,2) [not null]
  created_at timestamp
  updated_at timestamp
}
